--- a/openrouter-playground/src/styles/globals.css
+++ b/openrouter-playground/src/styles/globals.css
@@ -24,6 +24,18 @@ html {
   background-color: #182435;
 }
 
+.prose :where(hr):not(:where([class~="not-prose"] *)) {
+    border-color: var(--tw-prose-hr);
+    border-top-width: 1px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.prose :where(p):not(:where([class~="not-prose"] *)) {
+    margin-top: 1.0em;
+    margin-bottom: 1.0em;
+}
+
 @layer base {
   :root {
     --text-primary: 41, 37, 36;
